--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "dsvsv",
   "main": "index.js",
   "scripts": {
-    "start": "webpack",
+    "start": "webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "babel": {
