--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "babel": {
-    "presets": ["env", "react"]
+    "presets": [
+      "env",
+      "react"
+    ]
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
